overflow fix for scroll bars

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 
 /* main container */
 
+body {
+    overflow: hidden;
+}
+
 .fallingHealth {
     text-align: center;
 }
